--- a/app/src/main/res/drawable/gradient_background_perfil.xml
+++ b/app/src/main/res/drawable/gradient_background_perfil.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="135"
-        android:startColor="#FFFFFF"
-        android:endColor="#FFFFFF"
+        android:startColor="#E0E7FF"
+        android:endColor="#DBEAFE"
         android:type="linear" />
 </shape>
