--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,14 +12,15 @@
         android:id="@+id/imageView2"
         android:layout_width="140dp"
         android:layout_height="140dp"
+        android:background="@android:color/transparent"
         android:contentDescription="@string/app_name"
+        android:src="@drawable/clever"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.27"
-        android:src="@drawable/clever"/>
+        app:layout_constraintVertical_bias="0.27" />
 
     <EditText
         android:id="@+id/etContrasenia"
@@ -47,7 +48,7 @@
         android:layout_height="55dp"
         android:layout_marginHorizontal="40dp"
         android:layout_marginTop="32dp"
-        android:backgroundTint="#4A90E2"
+        android:backgroundTint="#009688"
         android:fontFamily="sans-serif-medium"
         android:text="Iniciar sesión"
         android:textAllCaps="false"
@@ -78,5 +79,23 @@
         app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageView2" />
+
+    <TextView
+        android:id="@+id/tvError"
+        android:layout_marginHorizontal="40dp"
+        android:layout_marginTop="16dp"
+        android:textColor="#FF0000"
+        android:textSize="16sp"
+        android:text=""
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnIniciar"
+        app:layout_constraintVertical_bias="0.322" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
