--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,7 +13,7 @@
 
     <fragment
         android:id="@+id/nav_gallery"
-        android:name="com.example.trabajo_practivo_inmobiliaria.ui.gallery.GalleryFragment"
+        android:name="com.example.trabajo_practivo_inmobiliaria.ui.perfil.PerfilFragment"
         android:label="Perfil"
         tools:layout="@layout/fragment_gallery" />
 
