--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -230,6 +230,7 @@
         android:layout_marginEnd="24dp"
         android:backgroundTint="#009688"
         android:text="Editar"
+        android:textColor="#FFFFFF"
         android:textSize="16sp"
         android:textStyle="bold"
         app:cornerRadius="12dp"
