--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,7 +19,7 @@
 
     <fragment
         android:id="@+id/nav_slideshow"
-        android:name="com.example.trabajo_practivo_inmobiliaria.ui.slideshow.SlideshowFragment"
+        android:name="com.example.trabajo_practivo_inmobiliaria.ui.inmuebles.InmuebleFragment"
         android:label="Inmuebles"
         tools:layout="@layout/fragment_slideshow" />
     <fragment
