--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -50,7 +50,10 @@
             <TextView
                 android:id="@+id/tvErrorPerfil"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textColor="#FF0000"
+
+                />
 
         </LinearLayout>
 
