Agregada la funcionalidad para agregar inmuebles.
Se ha implementado la funcionalidad completa para añadir nuevos inmuebles. Esto incluye:
*   Creación del fragmento `AgregarInmuebleFragment` con su `ViewModel` y layout correspondiente para el formulario de carga.
*   Adición de un `FloatingActionButton` en la lista de inmuebles para navegar a la pantalla de agregar.
*   Actualización de `ApiClient` para incluir un endpoint `POST` que permite cargar un inmueble con su imagen (multipart).
*   Implementación de la lógica en `AgregarInmuebleViewModel` para manejar la selección de imágenes desde la galería, la validación de campos y el envío de datos a la API.

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -25,6 +25,9 @@
         <action
             android:id="@+id/action_nav_slideshow_to_detallleInmuebleFragment"
             app:destination="@id/detallleInmuebleFragment" />
+        <action
+            android:id="@+id/action_nav_slideshow_to_agregarInmuebleFragment"
+            app:destination="@id/agregarInmuebleFragment" />
     </fragment>
     <fragment
         android:id="@+id/contratosFragment"
@@ -55,5 +58,14 @@
         android:id="@+id/logoutFragment"
         android:name="com.example.trabajo_practivo_inmobiliaria.login.LogoutFragment"
         android:label="Logout">
+    </fragment>
+    <fragment
+        android:id="@+id/agregarInmuebleFragment"
+        android:name="com.example.trabajo_practivo_inmobiliaria.ui.inmuebles.AgregarInmuebleFragment"
+        android:label="fragment_agregar_inmueble"
+        tools:layout="@layout/fragment_agregar_inmueble" >
+        <action
+            android:id="@+id/action_agregarInmuebleFragment_to_nav_slideshow"
+            app:destination="@id/nav_slideshow" />
     </fragment>
 </navigation>
