--- a/app/src/main/res/layout/fragment_pagos.xml
+++ b/app/src/main/res/layout/fragment_pagos.xml
@@ -6,12 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".ui.inquilinos.InquilinosFragment">
 
+
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/listaInquilinos"
-        android:layout_width="409dp"
-        android:layout_height="729dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/lista2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
