Agregada la funcionalidad de cambiar contraseña.
Se ha añadido un nuevo fragmento y la lógica necesaria para que los usuarios puedan cambiar su contraseña.

Los cambios incluyen:
*   **Perfil:** Se agregó un botón "Cambiar contraseña" en la pantalla de perfil que navega a la nueva vista.
*   **Nuevo Fragmento `CambiarContrasenia`:** Se creó la interfaz de usuario `fragment_cambiar_contrasenia.xml` con campos para la contraseña actual y la nueva, junto con su lógica en `CambiarContraseniaFragment.java` y `CambiarContraseniaViewModel.java`.
*   **Navegación:** Se actualizaron las acciones de navegación en `mobile_navigation.xml` para conectar el perfil con la pantalla de cambio de contraseña.
*   **API Client:** Se añadió el endpoint `PUT /api/Propietarios/changePassword` en `ApiClient.java` para manejar la solicitud de actualización de la contraseña en el servidor.

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,7 +15,11 @@
         android:id="@+id/nav_gallery"
         android:name="com.example.trabajo_practivo_inmobiliaria.ui.perfil.PerfilFragment"
         android:label="Perfil"
-        tools:layout="@layout/fragment_gallery" />
+        tools:layout="@layout/fragment_gallery" >
+        <action
+            android:id="@+id/action_nav_gallery_to_cambiarContraseniaFragment"
+            app:destination="@id/cambiarContraseniaFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_slideshow"
@@ -104,5 +108,14 @@
         <action
             android:id="@+id/action_detalleInquilinoFragment_to_inquilinosFragment"
             app:destination="@id/inquilinosFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/cambiarContraseniaFragment"
+        android:name="com.example.trabajo_practivo_inmobiliaria.ui.perfil.CambiarContraseniaFragment"
+        android:label="fragment_cambiar_contrasenia"
+        tools:layout="@layout/fragment_cambiar_contrasenia" >
+        <action
+            android:id="@+id/action_cambiarContraseniaFragment_to_nav_gallery"
+            app:destination="@id/nav_gallery" />
     </fragment>
 </navigation>
